Support update with returning clause